<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16ssp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_vw"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/pikachu"
        android:paddingBottom="@dimen/_12ssp"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_vw"
        android:text="@string/Name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_16ssp"
        android:paddingBottom="@dimen/_12ssp"/>

    <EditText
        android:id="@+id/name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"

        />


    <TextView
        android:id="@+id/email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_tv"
        android:text="@string/Email"
        android:textSize="@dimen/_16ssp"
        android:textColor="@android:color/black"
        android:paddingBottom="@dimen/_12ssp"

        />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_tv"
        android:inputType="textEmailAddress"
        android:paddingBottom="@dimen/_12sdp"
        />

    <TextView
        android:id="@+id/qualify_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:text="@string/qualification"
        android:textSize="@dimen/_16ssp"
        android:textColor="@android:color/black"
        />

    <EditText
        android:id="@+id/qualify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/qualify_tv"
        android:paddingBottom="@dimen/_12ssp"

        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/qualify"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:paddingTop="@dimen/_12ssp"
        android:text="@string/upload"
        android:textSize="@dimen/_12ssp" />
</RelativeLayout>